2008-02-20  Hans Boehm <Hans.Boehm@hp.com>

	* include/private/gcconfig.h: Add misssing FREEBSD macro
	consistency test.

2008-02-20  Hans Boehm <Hans.Boehm@hp.com>

	* allchblk.c (GC_enough_large_bytes_left): No longer take
	parameters; return free list index bound.
	(GC_merge_unmapped): Don't access nexthdr until after null test.
	(Fixes bug in 1/29/08 check-in.)  (GC_allochblk): Calculate
	when splitting is allowable only once here, not when considering each
	block. (GC_allchblk_nth): Accept new may_split parameter.
	Avoid some redundant tests for exact size matches.
	* alloc.c (GC_should_collect): Cache min_bytes_allocd.
	(GC_maybe_gc): Make locking assertion testable.
	* mark_rts.c: Fix indentation.
	* pthread_stop_world.c: Replace old GC_err_printf1 reference.
	* tests/test.c: Remove (void) casts.  Optionally print some
	timing information.

2008-02-15  Hans Boehm <Hans.Boehm@hp.com>

	* windows-untested/gc.def: Remove CreateThread line.
	* windows-untested/README: New file.
	* win32_threads.c (GC_use_DllMain): Force collector initialization.
	(GC_init_parallel): Reformat comment.
	* include/gc.h (GC_use_DllMain): Clarify usage rules in comment.
	* mark.c (GC_mark_from): Slightly simplify GC_DS_PER_OBJECT code.
	* include/gc_cpp.h: Add matching placement delete overloads
	everywhere.
	* include/private/gc_locks.h (NO_THREAD): Add cast.
	* include/private/gcconfig.h: Add test for __HP_aCC.
	* configure.ac, tests/tests.am:  Avoid libgccpp on HP/UX.
	* Makefile.in, configure: Regenerate.

2008-02-11  Hans Boehm <Hans.Boehm@hp.com> (partly David Leonard)

	* doc/README.win32: Fix typo.
	* configure.ac: Fix printing of enable-shared result.
	* configure: Regenerate.

2008-02-08  Hans Boehm <Hans.Boehm@hp.com>

	* misc.c (GC_init_inner): Assert !GC_need_to_lock only when
	defined.  (GC_call_with_stack_base): Add GC_API.
	* os_dep.c (GC_get_stack_base): Add GC_API.
	* win32_threads.c: (GC_register_my_thread, GC_unregister_my_thread):
	Add GC_API.