@@ -1,5 +1,11 @@
 2008-02-20  Hans Boehm <Hans.Boehm@hp.com>
 
+	* allchblk.c (add_to_fl): disable assertions with USE_MUNMAP,
+	and refine assertions to handle huge unmergable blocks.
+	(GC_allochblk_nth): Add comment.
+
+2008-02-20  Hans Boehm <Hans.Boehm@hp.com>
+
 	* include/private/gcconfig.h: Add misssing FREEBSD macro
 	consistency test.
 
